[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/FairUsePlease.gd" type="Script" id=1]
[ext_resource path="res://Assets/x.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/check.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/BG.tscn" type="PackedScene" id=4]

[node name="FairUsePlease" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" parent="." instance=ExtResource( 4 )]
position = Vector2( -40, 240 )

[node name="BookSpawn" type="Position2D" parent="."]
position = Vector2( 451, 320 )

[node name="guidelines" type="RichTextLabel" parent="."]
margin_left = 680.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 312.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Fair Use Guidelines:

1. Educational Use:
   - Using copyrighted material for educational purposes, such as teaching, research, and scholarship, is generally considered fair use.

2. Commentary and Criticism:
   - Providing commentary, criticism, or parody of copyrighted works is often protected under fair use.

3. Transformative Use:
   - Transforming the original work into something new, such as creating a remix or mashup, may qualify as fair use.

4. Non-Commercial Use:
   - Using copyrighted material for non-commercial purposes is more likely to be considered fair use.

5. Nature of the Copyrighted Work:
   - Fair use is more likely if the work used is factual or non-fictional rather than highly creative or fictional.

Remember, fair use is a complex legal doctrine, and these guidelines are meant for general understanding rather than legal advice. Always consider seeking legal advice for specific situations.
"

[node name="ButtonScaleYes" type="Node2D" parent="."]
scale = Vector2( 0.1, 0.1 )

[node name="Yes" type="TextureButton" parent="ButtonScaleYes"]
margin_left = 480.0
margin_top = 4080.0
margin_right = 1504.0
margin_bottom = 5104.0
texture_normal = ExtResource( 3 )

[node name="ButtonScaleNo" type="Node2D" parent="."]
scale = Vector2( 0.1, 0.1 )

[node name="No" type="TextureButton" parent="ButtonScaleNo"]
margin_left = 8160.0
margin_top = 4080.0
margin_right = 9184.0
margin_bottom = 5104.0
texture_normal = ExtResource( 2 )

[node name="Author" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 48.0
margin_right = 176.0
margin_bottom = 88.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Author:"

[node name="Publisher" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 272.0
margin_right = 176.0
margin_bottom = 336.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Publisher:"

[node name="Description" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 152.0
margin_right = 232.0
margin_bottom = 248.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Description"

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 104.0
margin_right = 160.0
margin_bottom = 144.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Title:"

[connection signal="pressed" from="ButtonScaleYes/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="ButtonScaleNo/No" to="." method="_on_No_pressed"]
